added instructions screen and map

--- a/POKERPG/index.html
+++ b/POKERPG/index.html
@@ -9,12 +9,12 @@
     <link rel="icon" href="favicon.png" type="image/png">
   </head>
   <body>
-    <h1> PokeRPG </h1>
+    <h1><img src="./game/assets/logo.svg" height="10%" width="20%"></h1>
     <div id="mainArea">
         <button id="startbutton">
             <img src="./game/assets/start.png">
         </button>   
     </div>
-	<script src="game/index.js"></script>
+	<script src="game/index.js" type="module" ></script>
   </body>
 </html> 
