--- a/POKERPG/index.html
+++ b/POKERPG/index.html
@@ -7,6 +7,7 @@
     <title>PokeRPG</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P">
   </head>
   <body>
     <h1><img src="./game/assets/logo.svg" height="10%" width="20%"></h1>
