completed the game

--- a/POKERPG/index.html
+++ b/POKERPG/index.html
@@ -16,6 +16,9 @@
             <img src="./game/assets/start.png">
         </button>   
     </div>
+    <footer>
+      <p>&copy; 2022 Varun R Mallya | Made with ❤️ | <a href="https://www.github.com/varun-r-mallya">GitHub</a></p>
+    </footer>
 	<script src="game/index.js" type="module" ></script>
   </body>
 </html> 
