lets see if this works

--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
     <script>
       function preloadImages() {
         const images = [
-          "./assets/logo.svg",
-          "./assets/start.png",
-          "./assets/battle.png",
-          "./assets/character.png",
-          "./assets/instructions.png",
-          "./assets/pokedex.png",
-          "./assets/choice.png",
-          "./assets/hp0.png",
-          "./assets/hp10.png",
-          "./assets/hp30.png",
-          "./assets/hp50.png",
-          "./assets/hp70.png",
-          "./assets/hp90.png",
-          "./assets/hp100.png",
-          "./assets/map.png",
-          "./assets/pokeball.png",
-          "./assets/map.png",
+          "./game/assets/logo.svg",
+          "./game/assets/start.png",
+          "./game/assets/battle.png",
+          "./game/assets/character.png",
+          "./game/assets/instructions.png",
+          "./game/assets/pokedex.png",
+          "./game/assets/choice.png",
+          "./game/assets/hp0.png",
+          "./game/assets/hp10.png",
+          "./game/assets/hp30.png",
+          "./game/assets/hp50.png",
+          "./game/assets/hp70.png",
+          "./game/assets/hp90.png",
+          "./game/assets/hp100.png",
+          "./game/assets/map.png",
+          "./game/assets/pokeball.png",
+          "./game/assets/map.png",
           "favicon.png"
         ];
 
