everything done except popkedex. not gonna do

--- a/POKERPG/index.html
+++ b/POKERPG/index.html
@@ -10,14 +10,27 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P">
   </head>
   <body>
+    <div id="pokedex" class="pokedex">
+      <div class="pokedex-content">
+        <span class="close">&times;</span>
+        <div id="searchbar">
+        <h2 style="font-family: 'Press Start 2P', cursive;">Pokedex</h2>
+        <input type="text" id="search" placeholder="Search Pokemon">
+        </div>
+        <canvas id="pokedexCanvas" width="600" height="580"></canvas>
+      </div>
+    </div>
     <h1><img src="./game/assets/logo.svg" height="10%" width="20%"></h1>
     <div id="mainArea">
         <button id="startbutton">
             <img src="./game/assets/start.png">
         </button>   
     </div>
+    <div id="pokedexDiv">
+    <button id="pokedexButton"><img src="./game/assets/pokedex.png" width="50%" height="50%"></button>
+    </div>
     <footer>
-      <p>&copy; 2022 Varun R Mallya | Made with ❤️ | <a href="https://www.github.com/varun-r-mallya">GitHub</a></p>
+      <p>&copy; 2024 Varun R Mallya | Made with ❤️ | <a href="https://www.github.com/varun-r-mallya">GitHub</a></p>
     </footer>
 	<script src="game/index.js" type="module" ></script>
   </body>
