--- a/POKERPG/index.html
+++ b/POKERPG/index.html
@@ -15,7 +15,7 @@
         <span class="close">&times;</span>
         <div id="searchbar">
         <h2 style="font-family: 'Press Start 2P', cursive;">Pokedex</h2>
-        <input type="text" id="search" placeholder="Search Pokemon">
+        <input type="text" id="search" placeholder="Search Pokemon" onsubmit="">
         </div>
         <canvas id="pokedexCanvas" width="600" height="580"></canvas>
       </div>
