made lots of changes

--- a/POKERPG/index.html
+++ b/POKERPG/index.html
@@ -20,15 +20,19 @@
         <canvas id="pokedexCanvas" width="600" height="580"></canvas>
       </div>
     </div>
-    <h1><img src="./game/assets/logo.svg" height="10%" width="20%"></h1>
+    <div id="header">
+    <h1>
+      <img src="./game/assets/logo.svg" height="10%" width="20%">
+    </h1>
+      <div id="pokedexDiv">
+      <button id="pokedexButton"><img src="./game/assets/pokedex.png" width="50%" height="50%"></button>
+      </div>
+    </div>
     <div id="mainArea">
         <button id="startbutton">
             <img src="./game/assets/start.png">
         </button>   
-    </div>
-    <div id="pokedexDiv">
-    <button id="pokedexButton"><img src="./game/assets/pokedex.png" width="50%" height="50%"></button>
-    </div>
+      </div>
     <footer>
       <p>&copy; 2024 Varun R Mallya | Made with ❤️ | <a href="https://www.github.com/varun-r-mallya">GitHub</a></p>
     </footer>
